[package]
name = "bin_info"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin_info"
path = "bin/bin_info.rs"

[dependencies]
anyhow = "1.0.95"
bytesize = "1.3.0"
comfy-table = "7.1.3"
data-encoding = "2.6.0"
figlet-rs = "0.1.5"
fuzzyhash = "0.2.2"
goblin = "0.9.3"
hasher = "0.1.4"
hex = "0.4.3"
indicatif = "0.17.9"
infer = "0.16.0"
md-5 = "0.10.6"
mime_guess = "2.0.5"
ring = "0.17.8"
rust-strings = "0.6.0"
sha1 = "0.10.6"
sha2 = "0.10.8"

pem-rfc7468 = "=1.0.0-rc.1"
pe-sign = "0.1.10"
clap = {version = "4.5.28", features = ["derive"] }
colored = "=2.2.0"
serde_json = "1.0.138"
serde = {version = "1.0.217", features = ["derive"] }
